# transaction-notifier

./: .gitignore  Cargo.toml  deploy-local.sh  dfx.json
canister/api/: Cargo.toml  can.did
canister/api/src/: lib.rs
canister/api/src/lifecycle/: init.rs
canister/api/src/queries/: mod.rs  supported_tokens.rs
canister/api/src/updates/: add_token.rs  mod.rs  subscribe.rs  update_token_config.rs
canister/c2c_client/: Cargo.toml
canister/c2c_client/src/: lib.rs
canister/impl/: Cargo.toml
canister/impl/src/: env.rs  guards.rs  lib.rs
canister/impl/src/lifecycle/: heartbeat.rs  init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
canister/impl/src/model/: ledger_sync_state.rs  mod.rs  notifications.rs  notifications_queue.rs  subscriptions.rs  token_data.rs
canister/impl/src/queries/: http_request.rs  mod.rs  supported_tokens.rs
canister/impl/src/updates/: add_token.rs  mod.rs  subscribe.rs  update_token_config.rs
libraries/canister_logger/: Cargo.toml
libraries/canister_logger/src/: lib.rs
libraries/types/: Cargo.toml
libraries/types/src/: lib.rs
