[workspace]
members = [
    "canister/api",
    "canister/impl",
    "canister/c2c_client",
    "libraries/canister_logger",
    "libraries/types",
]

[patch.crates-io]
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs", rev = "b108fb14a6f6c912fd8547a41549804638ebca8e" }
ic-ledger-types = { git = "https://github.com/hpeebles/cdk-rs", rev = "b108fb14a6f6c912fd8547a41549804638ebca8e" }