[workspace]
members = [
    "canister/api",
    "canister/impl",
    "canister/c2c_client",
    "libraries/canister_logger",
    "libraries/types",
]

[patch.crates-io]
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs", rev = "a4a17c75297ba96e2d98b8728c710b6d6c173b8d" }
ic-ledger-types = { git = "https://github.com/hpeebles/cdk-rs", rev = "a4a17c75297ba96e2d98b8728c710b6d6c173b8d" }