[package]
name = "transaction_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
ic-ledger-types = "0.1.1"
serde = "1.0.136"
serde_bytes = "0.11.5"
types = { path = "../../libraries/types" }
