[package]
name = "transaction_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
ic-ledger-types = "0.1.2"
serde = "1.0.137"
serde_bytes = "0.11.6"
types = { path = "../../libraries/types" }
