[package]
name = "transaction_notifier_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
canister_logger = { path = "../../libraries/canister_logger" }
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "9d0fd52de49ab46b9b51c2b76b9b0477e3199a4e" }
canister_tracing_macros = { git = "https://github.com/open-ic/ic-utils", rev = "9d0fd52de49ab46b9b51c2b76b9b0477e3199a4e" }
futures = "0.3.21"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
ic-ledger-types = "0.1.2"
itertools = "0.10.3"
serde = "1.0.137"
serde_bytes = "0.11.6"
serde_json = "1.0.81"
stable_memory = { git = "https://github.com/open-ic/ic-utils", rev = "9d0fd52de49ab46b9b51c2b76b9b0477e3199a4e" }
tracing = "0.1.35"
transaction_notifier = { path = "../api" }
types = { path = "../../libraries/types" }
