[package]
name = "canister_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
serde = "1.0.136"
tracing = "0.1.33"
tracing-attributes = "0.1.20"
tracing-subscriber = { version = "0.3.11", features = ["json"] }
types = { path = "../types" }
